# wisip

./: .gitignore  Cargo.toml  README.md  design.md
client/: README.md
client/charmaps/: fullwidth.json  halfwidth.json
client/dezlclient/: __main__.py  commandhandler.py  connection.py  display.py  gameclient.py  layout.xml  layout2.xml  loaders.py  main.py  parseargs.py  utils.py
client/dezlclient/common/: messages.py
client/keybindings/: azerty.json  default.json
client/performance/: jsonload.py  largeworld.json  performance.py  updateprofile
client/ratuil/: ansiscreen.py  bufferedscreen.py  cursedpad.py  cursedscreen.py  drawtarget.py  inputs.py
client/ratuil/widgets/: field.py  overlay.py
client/web/: display.js  edgefuzz.js  index.html  main.js  style.css
enum-assoc/: Cargo.toml
hacks/: basicclient.py  emptyclient.py  wsclient.html  wsclient.py
src/: action.rs  basemap.rs  config.rs  controls.rs  creature.rs  crop.rs  errors.rs  gameserver.rs  grid.rs  ground.rs  heightmap.rs  holder.rs  inventory.rs  item.rs  main.rs  map.rs  mapgen.rs  persistence.rs  player.rs  pos.rs  random.rs  randomtick.rs  sprite.rs  tickstamp.rs  tile.rs  timestamp.rs  util.rs  vec2.rs  world.rs  worldmessages.rs
src/server/: address.rs  connection.rs  holder.rs  mod.rs  streamconnection.rs  tcpserver.rs  unixserver.rs  websocketserver.rs  wsserver.rs
src/util/: holder.rs  math.rs  mod.rs
web/: display.js  edgefuzz.js  index.html  main.js
