[package]
name = "dezl"
version = "0.1.0"
edition = "2021"
authors = ["troido <troido@protonmail.com>"]
description = "Experimental ascii mmorpg"
categories = ["game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["net", "os-ext"] }
nix = "0.13"
users = "0.8"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
clap = {version = "4.0", features = ["derive", "env"] }
unicode_categories = "0.1.1"
chrono = "0.4.17"
json5 = "0.2.8"
enum_properties = "0.3"
strum = "0.23"
strum_macros = "0.23"
tungstenite = "0.17.3"
enum_dispatch = "0.3.8"

