[package]
name = "dezl"
version = "0.1.0"
edition = "2021"
authors = ["troido"]
description = "Experimental ascii mmorpg"
categories = ["game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["net", "os-ext"] }
nix = "0.25"
users = "0.8"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
clap = {version = "4.3", features = ["derive", "env"] }
unicode_categories = "0.1.1"
time = "0.3.21"
json5 = "0.2.8"
tungstenite = "0.17.3"
enum_dispatch = "0.3.8"
enum-assoc = { version = "0.4.0", git = "https://github.com/Adhalianna/enum-assoc" }

[profile.release]
debug = true

[rust]
debuginfo-level = 1

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
